seaqt/QtQml/gen_qjslist.h

class QJSListForInIterator;
class QJSListForOfIterator;
class QJSListIndexClamp;
typedef struct QJSListForInIterator QJSListForInIterator;
typedef struct QJSListForOfIterator QJSListForOfIterator;
typedef struct QJSListIndexClamp QJSListIndexClamp;
QJSListIndexClamp* QJSListIndexClamp_new_from(QJSListIndexClamp* from);
QJSListIndexClamp* QJSListIndexClamp_new();
ptrdiff_t QJSListIndexClamp_clamp_start_max(ptrdiff_t start, ptrdiff_t max);
void QJSListIndexClamp_operatorAssign(QJSListIndexClamp* self, QJSListIndexClamp* from);
ptrdiff_t QJSListIndexClamp_clamp_start_max_min(ptrdiff_t start, ptrdiff_t max, ptrdiff_t min);
bool QJSListForInIterator_hasNext(const QJSListForInIterator* self);
ptrdiff_t QJSListForInIterator_next(QJSListForInIterator* self);
void QJSListForOfIterator_init(QJSListForOfIterator* self);